==> una1veritas/ARMWork/armcmx/tools/SDFatFs/ffsample/sh7262/fftest/mmc.c <==
#include "iodefine.h"
#include "diskio.h"
#define CS_LOW()	PORT.PGDR1.BIT.PG20DR = 0	/* MMC CS = L */
#define	CS_HIGH()	PORT.PGDR1.BIT.PG20DR = 1	/* MMC CS = H */
#define SOCKPORT	PORT.PJPR0.WORD		/* Socket contact input port (PJ) */
#define SOCKWP		0x0008				/* Write protect bit (PJ3) */
#define SOCKINS		0x0002				/* Card detect bit (PJ1) */
#define BCLK		48000000UL			/* Clock frequency supplied to SPI module */
#define CLK_FAST	12000000UL			/* Fast SCLK (working) */
#define	CLK_SLOW	400000UL			/* Fast SCLK (initialize) */
#define	DIV_F		(BCLK/CLK_FAST/2-1)
#define	DIV_S		(BCLK/CLK_SLOW/2-1)
#define	FCLK_SLOW()	{RSPI0.SPCR.BIT.SPE = 0; RSPI0.SPBR.BYTE=DIV_S; RSPI0.SPCR.BIT.SPE = 1;}	/* Set slow clock (100k-400k) */
#define	FCLK_FAST()	{RSPI0.SPCR.BIT.SPE = 0; RSPI0.SPBR.BYTE=DIV_F; RSPI0.SPCR.BIT.SPE = 1;}	/* Set fast clock (MMC:20MHz max, SD:25MHz max) */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send */
)
{
	RSPI0.SPDR.BYTE = *buff++;	/* Start transmission (Push a byte into data pipe) */
	btx--;

	do {
		RSPI0.SPDR.BYTE = *buff++;		/* Send next byte */
		while (!RSPI0.SPSR.BIT.SPRF) ;	/* Wait for a byte sent */
		RSPI0.SPDR.BYTE;				/* Discard received byte */
	} while (--btx);					/* Repeat until all data sent */

	while (!RSPI0.SPSR.BIT.SPRF) ;		/* Discard byte in the data pipe */
	RSPI0.SPDR.BYTE;
}

static
void rcvr_spi_multi (
	BYTE *buff,		/* Pointer to data buffer */
	UINT btr		/* Number of bytes to receive */
)
{
	RSPI0.SPDR.BYTE = 0xFF;				/* Send a 0xFF (Push a byte into data pipe) */
	btr--;

	do {
		RSPI0.SPDR.BYTE = 0xFF;			/* Send a 0xFF */
		while (!RSPI0.SPSR.BIT.SPRF) ;	/* Wait for end of transfer */
		*buff++ = RSPI0.SPDR.BYTE;		/* Store received byte */
	} while (--btr);					/* Repeat until all data received */

	while (!RSPI0.SPSR.BIT.SPRF) ;		/* Store left byte in the data pipe */
	*buff++ = RSPI0.SPDR.BYTE;
}

DSTATUS disk_initialize (
	BYTE pdrv		/* Physical drive number (0) */
)
{
	BYTE n, cmd, ty, ocr[4];


	if (pdrv) return STA_NOINIT;		/* Supports only drive 0 */
	if (Stat & STA_NODISK) return Stat;	/* Is card existing in the soket? */

	init_spi();							/* Initialize SPI */
	FCLK_SLOW();						/* Set slow clock */
	for (n = 10; n; n--) xchg_spi(0xFF);/* Send 80 dummy clocks */

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Put the card SPI/Idle state */
		Timer1 = 100;						/* Initialization timeout = 1 sec */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDv2? */
			for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);	/* Get 32 bit return value of R7 resp */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* Is the card supports vcc of 2.7-3.6V? */
				while (Timer1 && send_cmd(ACMD41, 1UL << 30)) ;	/* Wait for end of initialization with ACMD41(HCS) */
				if (Timer1 && send_cmd(CMD58, 0) == 0) {		/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;	/* Card id SDv2 */
				}
			}
		} else {	/* Not SDv2 card */
			if (send_cmd(ACMD41, 0) <= 1) 	{	/* SDv1 or MMC? */
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 (ACMD41(0)) */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 (CMD1(0)) */
			}
			while (Timer1 && send_cmd(cmd, 0)) ;		/* Wait for end of initialization */
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Set block length: 512 */
				ty = 0;
		}
	}
	CardType = ty;	/* Card type */
	deselect();

	if (ty) {			/* OK */
		FCLK_FAST();			/* Set fast clock */
		Stat &= ~STA_NOINIT;	/* Clear STA_NOINIT flag */
	} else {			/* Failed */
		deinit_spi();
		Stat = STA_NOINIT;
	}

	return Stat;
}
