==> lvgl/lv_port_aurix/Fat_fs/mmc.c <==
#include <Cpu/Std/Ifx_Types.h>
#include "Configuration.h"
#include "diskio.h"
#define	_USE_CD		1	/* Use card detect switch */
#define _USE_WP		0	/* Use write protect switch */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */
#define CS_LOW()	{ IfxPort_setPinLow(SDCARD_USE_CHIPSELECT.pin.port, SDCARD_USE_CHIPSELECT.pin.pinIndex);	}   /* MMC CS = L */
#define	CS_HIGH()	{ IfxPort_setPinHigh(SDCARD_USE_CHIPSELECT.pin.port, SDCARD_USE_CHIPSELECT.pin.pinIndex);   }	/* MMC CS = H */
#define SOCKPORT SDCARD_USE_CD.port->IN.U
#define SOCKWP 0 //not used
#define SOCKINS 0x1<<SDCARD_USE_CD.pinIndex

void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send */
)
{
    /* wait until Spi is no longer busy (should not busy here) */
    while (IfxQspi_SpiMaster_getStatus(&g_Qspi_Mmc.drivers.spiMasterChannel) == SpiIf_Status_busy) {};

    IfxQspi_SpiMaster_exchange(&g_Qspi_Mmc.drivers.spiMasterChannel, buff, 0, (Ifx_SizeT)btx);

    /* wait don't wait our next call to xmit_spi will wait for us if needed */
}

void rcvr_spi_multi (
	BYTE *buff,		/* Pointer to data buffer */
	UINT btr		/* Number of bytes to receive */
)
{
    /* wait until Spi is no longer busy (should not busy here) */
    while (IfxQspi_SpiMaster_getStatus(&g_Qspi_Mmc.drivers.spiMasterChannel) == SpiIf_Status_busy) {};

    /* we don't have explizit send values, our driver will send 0xFF in this case (what we need) */
    IfxQspi_SpiMaster_exchange(&g_Qspi_Mmc.drivers.spiMasterChannel, 0, buff, (Ifx_SizeT)btr);

    /* wait don't wait our next call to rcvr_spi will wait for us if needed */
}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive number (0) */
)
{
	BYTE n, cmd, ty, ocr[4];


	if (drv) return STA_NOINIT;			/* Supports only drive 0 */
	if (Stat & STA_NODISK) return Stat;	/* Is card existing in the socket? */

	power_on();							/* Initialize SPI */
	FCLK_SLOW();						/* Set slow clock */
	for (n = 10; n; n--)
		{ rcvr_spi();	/* Send 80 dummy clocks */

		}
	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Put the card SPI/Idle state */
		Timer1 = 100;						/* Initialization timeout = 1 sec */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDv2? */
			for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();		/* Get 32 bit return value of R7 resp */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* Is the card supports vcc of 2.7-3.6V? */
				while (Timer1 && send_cmd(ACMD41, 1UL << 30)) ;	/* Wait for end of initialization with ACMD41(HCS) */
				if (Timer1 && send_cmd(CMD58, 0) == 0) {		/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;	/* Card id SDv2 */
				}
			}
		} else {	/* Not SDv2 card */
			if (send_cmd(ACMD41, 0) <= 1) 	{	/* SDv1 or MMC? */
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 (ACMD41(0)) */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 (CMD1(0)) */
			}
			while (Timer1 && send_cmd(cmd, 0)) ;		/* Wait for end of initialization */
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Set block length: 512 */
				ty = 0;
		}
	}
	CardType = ty;	/* Card type */
	deselect();

	if (ty) {			/* OK */
		FCLK_FAST();			/* Set fast clock */
		Stat &= ~STA_NOINIT;	/* Clear STA_NOINIT flag */
	} else {			/* Failed */
		power_off();
		Stat = STA_NOINIT;
	}

	return Stat;
}
